syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.masudulalam.models";

message BalanceRequest {
  int32 account_number = 1;
}

message Balance {
  int32 amount = 1;
}

message DepositRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

service BankService {
  rpc getBalance(BalanceRequest) returns (Balance);
  rpc addBalance(DepositRequest) returns (Balance);
  rpc deductBalance(WithdrawRequest) returns (Balance);
}